# geodesics

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: Geodesics.ipynb
src/geodesics/: __init__.py  factorized_pyramid.py  geodesic.py  straightness.py  unwrap.py
tests/: conftest.py  test_geodesic.py  test_tools.py
